# prometeo-ob

./: LICENSE  README.md
cra-client/: .env_local  (+3 more)
server/: docker-compose.override.yml-example  docker-compose.yml  pyproject.toml  requirements.txt
server/docker/django/: Dockerfile
server/docs/mkdocs/: license.md  mkdocs.yml
server/docs/mkdocs/docs/developers/concept/defi/: 00-what-is-defi.md  01-what-is-ethereum.md  02-evm.md  03-what-is-smart-contracts.md  04-crypto-bridge.md  05-dex.md  06-token-erc-20.md  07-lp-token.md  08-flash-loan.md  09-polygon.md  10-curve.md  11-compound.md  12-aave.md  13-mpc-wallet.md  14-amm.md  15-bearish-and-bullish.md  16-metamask.md  17-solidity.md  18-dapps.md
server/docs/mkdocs/docs/developers/conventions/docstring/: google.md
server/docs/mkdocs/docs/developers/project/: 08-configuration-drf-spectacular.md  11-configuration-django-health-check.md  12-configurar-nplusone.md  13-configuration-querycount.md  15-configuration-coverage.md  16-configuration-sphinx.md  18-configuration-docker.md  19-configuration-postgresql.md
server/docs/postman/: Prometeo-APIs.postman_collection.json  Prometeo-OB-APIs.postman_collection.json
server/docs/sphinx/: Dockerfile  README.md
server/docs/sphinx/docs/source/: conf.py
server/src/config/: .env.template
server/src/server/: urls.py  wsgi.py
server/src/server/apps/authentication/: __init__.py
server/src/server/apps/authentication/api/: schemas.py  serializers.py  services.py  urls.py  viewsets.py
server/src/server/apps/authentication/services/: feedback_account_service.py
server/src/server/apps/authentication/tests/: test_apps.py  test_models.py  test_serializers.py  test_urls.py  test_viewsets.py
server/src/server/apps/metas/: __init__.py
server/src/server/apps/metas/api/: serializers.py  services.py  urls.py  viewsets.py
server/src/server/apps/metas/tests/: test_apps.py  test_serializers.py  test_urls.py  test_viewsets.py
server/src/server/apps/user/: __init__.py
server/src/server/apps/user/api/: serializers.py  services.py  urls.py  viewsets.py
server/src/server/apps/user/tests/: test_apps.py  test_serializers.py  test_urls.py  test_viewsets.py
server/src/server/libs/shared/: choices.py  constants.py  decorators.py  exceptions.py  mixins.py  serializers.py
server/src/server/libs/shared/services/: http_client_service.py
server/src/server/settings/: __init__.py
server/src/server/settings/components/: common.py  database.py  drf.py
server/src/server/settings/environments/: development.py
(+98 files in other folders)
